tests/compile-fail/derive_tuple_struct.stderr
error: Can only derive `Snafu` for tuple structs with exactly one field
 --> tests/compile-fail/derive_tuple_struct.rs:5:1
  |
5 | pub struct TupleError(String, Location);
  | ^^^

error: StackError can only be derived for structs with named fields
 --> tests/compile-fail/derive_tuple_struct.rs:5:22
  |
5 | pub struct TupleError(String, Location);
  |                      ^^^^^^^^^^^^^^^^^^
